# FiberSectionPy

./: pyproject.toml
.github/workflow/: todoissue.yml
.github/workflows/: todoissue.yml
docs/: .buildinfo  index.html  objects.inv  search.html
docs/.doctrees/: index.doctree
docs/_sources/: index.rst.txt
docs/docs/source/: conf.py  index.rst
docs/release/: index.html
docs/release/.doctrees/: environment.pickle
fibersectionpy/: analysis.py  domain.py  materials.py  utilities.py
release/: genindex.html
