[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "FiberSectionPy_iammix"
version = "0.1.0"
authors = [
    {name = "Konstantinos E. Mixios", email="k.mixios@gmail.com"},
]

description = "FiberSectionPy is a lightweight python framework for calculation of Moment Curvature diagrams of sections."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Licence:: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

[project.urls]
"Homepage" = 'https://github.com/iammix/FiberSectionPy'
"Bug Tracker" = 'https://github.com/iammix/FiberSectionPy/issues'
